# innosystem

./: .gitignore  Cargo.toml  GUIDE.md  README.md  docker-compose.yml
core/api/: Cargo.toml  Dockerfile  docker-compose.yml
core/api/src/: config.rs  main.rs  state.rs
core/api/src/handlers/: customers.rs  health.rs  job_types.rs  jobs.rs  mod.rs  projects.rs  resellers.rs  runner_health.rs  runners.rs  wallet.rs
core/api/src/middleware/: auth.rs  mod.rs
core/api/src/services/: billing.rs  mod.rs  runner_health.rs
core/common/: Cargo.toml
core/common/migrations/: mod.rs
core/common/migrations/2025-04-08-201700_initial_schema/: down.sql  up.sql
core/common/migrations/2025-04-09-135300_phase3_entity_extension/: down.sql  up.sql
core/common/src/: config.rs  database.rs  errors.rs  lib.rs  migrations.rs  seed.rs
core/common/src/diesel_schema/: mod.rs
core/common/src/models/: custom_types.rs  customer.rs  job.rs  job_type.rs  mod.rs  project.rs  reseller.rs  runner.rs  wallet.rs
core/common/src/queue/: error.rs  job_queue.rs  mod.rs  redis.rs
core/common/src/repositories/: customer.rs  job.rs  job_type.rs  mod.rs  project.rs  reseller.rs  runner.rs  wallet.rs  wallet_transaction.rs
core/common/src/repositories/diesel/: customer.rs  job.rs  job_type.rs  mod.rs  project.rs  reseller.rs  runner.rs  wallet.rs  wallet_transaction.rs
core/common/src/repositories/in_memory/: customer.rs  job.rs  job_type.rs  mod.rs  wallet.rs
core/migrations/: Cargo.toml  Dockerfile  run_migrations.sh
core/migrations/src/: main.rs
core/runner/: Cargo.toml  Dockerfile  docker-compose.yml
core/runner/src/: config.rs  main.rs
core/runner/src/processor/: default.rs  mod.rs
core/tester/: Cargo.toml  Dockerfile
core/tester/src/: main.rs
postman/: innosystem_complete_api_collection.json  innosystem_job_types_api.json  innosystem_jobs_api.json  innosystem_projects_api.json  innosystem_runners_api.json  runner_health_api_collection.json
specs/: innosystem_specification.md  phase2_persistence_specification.md  phase_1_foundation_spec.md  phase_2_persistence_spec.md  phase_3_management_billing_spec.md  phase_3_management_billing_spec_new.md  phase_4_advanced_security_spec.md  phase_5_refinement_spec.md  rust_coding_conventions.md
