[package]
name = "innosystem-api"
version = "0.1.0"
edition = "2024"
rust-version.workspace = true
authors.workspace = true

[dependencies]
# Internal dependencies
innosystem-common = { path = "../common" }

# Re-export core dependencies from workspace
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
thiserror.workspace = true

# API specific
axum.workspace = true
axum-extra.workspace = true
axum-macros.workspace = true
tower.workspace = true
tower-http.workspace = true

# Database
diesel.workspace = true
diesel_migrations.workspace = true
dotenvy.workspace = true

# Redis
redis.workspace = true
bb8-redis.workspace = true
