[package]
name = "innosystem-common"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true

[dependencies]
# Re-export core dependencies from workspace
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
anyhow.workspace = true
thiserror.workspace = true

# Async
async-trait.workspace = true

# Database
diesel.workspace = true
r2d2.workspace = true

# Redis
redis.workspace = true
bb8-redis.workspace = true

[lib]
name = "innosystem_common"
path = "src/lib.rs"
