[package]
name = "innosystem-migrations"
version = "0.1.0"
edition = "2024"
rust-version.workspace = true
authors.workspace = true

[dependencies]
# Internal dependencies
innosystem-common = { path = "../common" }

# Re-export core dependencies from workspace
clap.workspace = true
dotenvy.workspace = true
diesel.workspace = true
diesel_migrations.workspace = true
tokio.workspace = true
anyhow.workspace = true
